# internal/modules/pocket/routes.go
@@ -13,6 +13,7 @@ func RegisterRoutes(r *gin.RouterGroup, controller *Controller) {
 		protected.GET("", controller.ListPockets)
 		protected.GET("/main", controller.GetMainPocket)
 		protected.GET("/active", controller.ListActivePockets)
+		protected.GET("/dropdown", controller.ListPocketsDropdown)
 		protected.GET("/:id", controller.GetPocket)
 		protected.PUT("/:id", controller.UpdatePocket)
 		protected.PUT("/:id/lock", controller.LockPocket)
